--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .container{
     display: grid;
-    grid-template-rows: auto 1fr;
+    grid-template-rows: auto 1fr 0.25fr;
     height: 100%;
     background-image: url(images/background.jpg);
     background-size: cover;
@@ -18,6 +18,7 @@ html,body{
     justify-self: center;
     align-self: center;
     padding: 20px;
+    text-shadow: 0 0 20px black;
 }
 
 .menu summary{
